# Metaworld

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  Makefile  README  README.md  TODO.md  contributions  contributions.txt  index.html  mocap_test.py  mujoco_migration.py  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  run.py  searchindex.js  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug.yml  proposal.yml
.github/workflows/: build-docs.yml  build.yml  docs-build-release.yml  linux-test.yml  macos-test.yml  metaworld-ci.yml  python-package.yml
README/: index.html
_static/: documentation_options.js
benchmark/action_space/: index.html
benchmark/benchmark_descriptions/: index.html
benchmark/expert_trajectories/: index.html
benchmark/reward_functions/: index.html
benchmark/state_space/: index.html
benchmark/task_descriptions/: index.html
citation/: index.html
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint  entrypoint-headless.sh
docs/: .gitignore  CNAME  README.md  citation.md  conf.py  index.md
docs/_builddir/: .buildinfo  CNAME  index.html  objects.inv  searchindex.js
docs/benchmark/: action_space.md  benchmark_descriptions.md  expert_trajectories.md  resetting.md  reward_functions.md  state_space.md  task_descriptions.md
docs/evaluation/: evaluation.md
docs/installation/: installation.md
docs/introduction/: basic_usage.md  installation.md
docs/rendering/: rendering.md
docs/usage/: basic_usage.md
evaluation/evaluation/: index.html
genindex/: index.html
installation/installation/: index.html
introduction/basic_usage/: index.html
introduction/installation/: index.html
introduction/rendering/: index.html
introduction/scripted_policies/: index.html
main/: searchindex.js
main/README/: index.html
main/_static/: documentation_options.js
main/search/: index.html
metaworld/: __init__.py  asset_path_utils.py  benchmark.py  env_dict.py  evaluation.py  sawyer_xyz_env.py  types.py  wrappers.py
metaworld/benchmarks/: __init__.py  base.py  ml1.py  ml10.py  ml10_with_pinned_goal.py  ml1_with_pinned_goal.py  ml45.py  ml45_with_pinned_goal.py  mt10.py  mt50.py
metaworld/core/: flat_goal_env.py  gym_to_multi_env.py  image_env.py  multitask_env.py  wrapper_env.py
metaworld/envs/: __init__.py  asset_path_utils.py  env_util.py  reward_utils.py  sawyer_assembly_peg_v2.py  sawyer_assembly_peg_v3.py  sawyer_basketball_v2.py  sawyer_basketball_v3.py  sawyer_bin_picking_v2.py  sawyer_bin_picking_v3.py  sawyer_box_close_v2.py  sawyer_box_close_v3.py  sawyer_button_press_topdown_v2.py  sawyer_button_press_topdown_v3.py  sawyer_button_press_topdown_wall_v2.py  sawyer_button_press_topdown_wall_v3.py  sawyer_button_press_v2.py  sawyer_button_press_v3.py  sawyer_button_press_wall_v2.py  sawyer_button_press_wall_v3.py  sawyer_coffee_button_v2.py  sawyer_coffee_button_v3.py  sawyer_coffee_pull_v2.py  sawyer_coffee_pull_v3.py  sawyer_coffee_push_v2.py  sawyer_coffee_push_v3.py  sawyer_dial_turn_v2.py  sawyer_dial_turn_v3.py  sawyer_disassemble_peg_v2.py  sawyer_disassemble_peg_v3.py  sawyer_door_close_v2.py  sawyer_door_close_v3.py  sawyer_door_lock_v2.py  sawyer_door_lock_v3.py  sawyer_door_unlock_v2.py  sawyer_door_unlock_v3.py  sawyer_door_v2.py  sawyer_door_v3.py  sawyer_drawer_close_v2.py  sawyer_drawer_close_v3.py  (+66 more)
metaworld/policies/: SawyerButtonPressV1Policy.py  __init__.py  action.py  policy.py  sawyer_assembly_v1_policy.py  sawyer_assembly_v2_policy.py  sawyer_assembly_v3_policy.py  sawyer_basketball_v1_policy.py  sawyer_basketball_v2_policy.py  sawyer_basketball_v3_policy.py  sawyer_bin_picking_v2_policy.py  sawyer_bin_picking_v3_policy.py  sawyer_box_close_v1_policy.py  sawyer_box_close_v2_policy.py  sawyer_box_close_v3_policy.py  sawyer_button_press_topdown_v1_policy.py  sawyer_button_press_topdown_v2_policy.py  sawyer_button_press_topdown_v3_policy.py  (+126 more)
mjc_models/: cartgripper_updown_2cam.xml  generate_touch_sensors.py  pushing2d_controller_touchsensor_nomarkers.xml
pick-place/: progress.csv  variant.json
push/: extra_data.pkl  progress.csv
push2/: variant.json
reach/: extra_data.pkl  progress.csv
scripts/: MUJOCO_LOG.TXT  demo_sawyer.py  env_runtime.py  grasp.py  keyboard_control.py  mouse_control.py  plot_rewards_returns.ipynb  plot_rewards_returns_noise_3D.ipynb  policy_testing.py  profile_memory_usage.py  scripted_policy_movie_grid.ipynb  scripted_policy_movies.ipynb  scripted_policy_movies_vmw.ipynb  visual_env_movies.ipynb
search/: index.html
tests/: helpers.py  test_memory_usage.py  test_mt1_single_seed.py  test_policies.py  test_thread_safety.py
tests_old/: helpers.py
v3.1.1/: 404.html  objects.inv
(+2036 files in other folders)
